# adm-project-tgnn

./: .gitignore  README.md  pyproject.toml
checkpoints/gru4rec/: config.yaml
config/: default.yaml  preprocessing.yaml
config/data/: gru4rec_yoochoose.yaml  tagnn_yoochoose.yaml  tgn_yoochoose.yaml
config/experiments/: gru4rec_baseline.yaml  gru4rec_smoke.yaml  tagnn_baseline.yaml  tagnn_smoke.yaml  tgn_baseline.yaml  tgn_bce_baseline.yaml  tgn_bce_v2.yaml  tgn_ce_baseline.yaml  tgn_smoke.yaml
config/model/: gru4rec.yaml  tagnn.yaml  tgn.yaml
config/sweeps/: gru4rec.yaml  tagnn.yaml
docs/: README.md  adm_projekt_wm_mo.docx  artifacts.md  configuration.md  data-and-eda.md  evaluation.md  experiments.md  first_presentation.md  overview.md  preprocessing.md  training.md
docs/models/: gru4rec.md  tagnn.md  tgn.md
notebooks/: cascade_sliding_window_demo.ipynb  colab_template.ipynb  eda_yoochose.ipynb  gru4rec_training_validation.ipynb  validate_preprocessing.ipynb
saved_models/gru4rec/: config.yaml
scripts/: download_raw_data.py
src/: main.py  utlis.py
src/artifacts/: __init__.py  meta.py  paths.py  vocab.py
src/colab/: __init__.py  setup.py
src/common/: __init__.py  constants.py  paths.py
src/config/: __init__.py  train_config.py  wandb_settings.py  yaml_loader.py
src/data/: __init__.py  gru4rec.py  meta.py
src/data_modules/: __init__.py  gru4rec.py  tagnn.py  tgn.py
src/evaluation/: __init__.py  baselines.py  metrics.py  sampled.py
src/models/: __init__.py  gru4rec.py
src/preprocessing/: __init__.py  __main__.py  category.py  clean.py  config.py  events.py  examples.py  export.py  load.py  pipeline.py  split.py  subsample.py  timestamps.py  vocab.py
src/runtime/: __init__.py  colab.py
src/training/: __init__.py  base_module.py  checkpoints.py  loop.py  paths.py  train_gru4rec.py  trainer_factory.py  (+1 more)
tests/: test_base_module.py  test_baselines.py  test_cli.py  test_datamodule.py  test_gru4rec_lit.py  test_metrics.py  test_preprocessing.py  test_sampled_eval.py  test_tagnn_batch_sampler.py  test_tagnn_datamodule.py  test_tagnn_dataset.py  test_tagnn_graph_batch.py  test_tagnn_lit.py  test_tgn_datamodule.py  test_tgn_dataset.py  test_tgn_decoder.py  test_tgn_lit.py  test_tgn_memory.py  test_tgn_model.py  test_tgn_node_ids.py  test_tgn_session_offset.py  test_training_paths.py  test_training_scaffold.py  test_yaml_config.py  tgn_fixtures.py
(+26 files in other folders)
