[project]
name = "adm-project-tgnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.6.17",
    "python-dotenv>=1.1.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.0",
    "cursor-notebook-mcp",
    "pytest",
    "lightning>=2.6.5",
]

[project.scripts]
train-gru4rec = "src.training.train_gru4rec:main"

[tool.pytest.ini_options]
pythonpath = ["."]
