[project]
name = "adm-project-tgnn"
version = "0.1.0"
description = "ADM project: session-based next-item recommendation on Yoochoose (GRU4Rec, TAGNN, TGN)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.6.17",
    "python-dotenv>=1.1.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.0",
    "lightning>=2.6.5",
    "jsonargparse[signatures]>=4.27.7",
    "pyyaml>=6.0.2",
    "pydantic>=2.11.0,<2.12.0",
    "torch-geometric>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest",
    "cursor-notebook-mcp>=0.3.1",
]

[tool.uv]
# fastmcp 2.10.x crashes on pydantic 2.12+ (Field default + default_factory)
override-dependencies = [
    "pydantic>=2.11.0,<2.12.0",
]

# PyTorch CUDA wheels (Linux + Windows). macOS falls back to PyPI (CPU).
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.scripts]
adm-train = "src.main:cli_main"

[tool.pytest.ini_options]
pythonpath = ["."]
